--- a/.github/workflows/infra-apply.yml
+++ b/.github/workflows/infra-apply.yml
@@ -1,25 +1,32 @@
 name: step1-infra-apply
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
 
+# Using client secret auth (no OIDC), so id-token permission is NOT required
 permissions:
   contents: read
+
+concurrency:
+  group: step1-infra-apply
+  cancel-in-progress: false
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
+
+    # Azure creds + Terraform variables (adjust values on the TF_VAR_* lines)
     env:
       ARM_CLIENT_ID:       ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET:   ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID:       ${{ secrets.ARM_TENANT_ID }}
 
-      # ---- Set your TF vars here (or use terraform.tfvars) ----
-      TF_VAR_rg_name:   "rg-appsvc-internal"
-      TF_VAR_location:  "eastus2"
-      TF_VAR_vnet_cidr: "10.20.0.0/16"
-      TF_VAR_snet_pe_cidr: "10.20.1.0/24"
+      # ---- Terraform variables used by infra/main.tf ----
+      TF_VAR_rg_name:       "rg-appsvc-internal"
+      TF_VAR_location:      "eastus2"
+      TF_VAR_vnet_cidr:     "10.20.0.0/16"
+      TF_VAR_snet_pe_cidr:  "10.20.1.0/24"
 
     steps:
       - name: Checkout
@@ -31,6 +38,7 @@ jobs:
           client-id:       ${{ env.ARM_CLIENT_ID }}
           tenant-id:       ${{ env.ARM_TENANT_ID }}
           subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
+          client-secret:   ${{ env.ARM_CLIENT_SECRET }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -46,7 +54,7 @@ jobs:
           terraform plan -out tfplan
           terraform apply -auto-approve tfplan
 
-      - name: Show outputs
+      - name: Capture outputs
         id: tfout
         working-directory: infra
         run: |
@@ -54,8 +62,8 @@ jobs:
           echo "APP=$(terraform output -raw webapp_name)"          >> $GITHUB_OUTPUT
           echo "PE_IP=$(terraform output -raw private_endpoint_ip)" >> $GITHUB_OUTPUT
 
-      - name: Print summary
+      - name: Summary
         run: |
-          echo "Resource Group: ${{ steps.tfout.outputs.RG }}"
-          echo "Web App:        ${{ steps.tfout.outputs.APP }}"
-          echo "PE Private IP:  ${{ steps.tfout.outputs.PE_IP }}"
+          echo "Resource Group : ${{ steps.tfout.outputs.RG }}"
+          echo "Web App        : ${{ steps.tfout.outputs.APP }}"
+          echo "Private EP IP  : ${{ steps.tfout.outputs.PE_IP }}"
